# Alertix

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  diesel.toml
backend/migrations/2024-12-15-174314_init/: up.sql
backend/src/: main.rs
backend/src/config/: redis.rs
backend/src/models/: notification.rs
backend/src/routes/: account.rs  loan.rs  mod.rs  transaction.rs
backend/src/types/: account.rs  types.rs
db/: Cargo.toml  diesel.toml
db/migrations/2024-12-19-101034_init/: down.sql  up.sql
db/src/: db.rs  schema.rs
db/src/models/: event.rs  mod.rs  notification.rs
worker/: Cargo.toml
worker/src/: main.rs  redis.rs  worker.rs
