[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
diesel = { version = "2.2.0", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
    "serde_json",
] }
r2d2 = "0.8.10"
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
serde_json = "1.0.133"
uuid = { version = "1.3", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
