[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = "../db" }
actix-web = "4.9.0"
dotenv = "0.15.0"
diesel = { version = "2.2.0", features = [
    "postgres",
    "chrono",
    "uuid",
    "serde_json",
] }
env_logger = "0.11.5"
log = "0.4"
redis = { version = "0.25.0", features = ["tokio-comp"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
serde_json = "1.0.133"
uuid = { version = "1.3", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
