[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
    "serde_json",
] }
r2d2 = "0.8.10"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.3", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
